--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     
                 <label for="plate">plate:</label>
                 <div class="input-group mb-2 mr-sm-2">
-                    <input type="number" class="form-control form-control-sm" id="plate" placeholder="licence plate"  max="5" />
+                    <input type="text" class="form-control form-control-sm" id="plate" placeholder="licence plate"  max="5" />
                 </div>
     
                 <label for="duration">duration: </label>
