attempt of setting
table value from edit

--- a/test.html
+++ b/test.html
@@ -40,14 +40,14 @@
             </tr>
 
             <tr>
-              <td class="date">15 may</td>
-              <td class="client">john</td>
-              <td class="police">0114ggd</td>
-              <td class="plate">12110141</td>
-              <td class="expiration">15 jun</td>
-              <td class="price">1200</td>
-              <td class="credit">200</td>
-              <td class="note">gjdgokidjg</td>
+              <td class="date">15 nov</td>
+              <td class="client">chris</td>
+              <td class="police">j5jdf</td>
+              <td class="plate">2453223</td>
+              <td class="expiration">15 aep</td>
+              <td class="price">2300</td>
+              <td class="credit">1300</td>
+              <td class="note">krgkgl</td>
           </tr>
         
           
